# termiji

./: Cargo.toml  README.md
asset/: data-by-emoji-category.json
src/: emoji.rs  input.rs  main.rs  ui.rs
src/ui/: input.rs
