[package]
name = "termiji"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
futures-timer = "3.0.3"
tokio = { version = "1.48.0", features = ["full"]}
serde_json = "1.0.140"
simple-home-dir = "0.1.4"
serde = { version = "1.0.219", features = ["derive"] }
terminal_size = "0.4.3"
cli-clipboard = "0.4.0"
